force-app/main/default/objects/GSS_Inventory_Report__c/GSS_Inventory_Report__c.object-meta.xml
<CustomObject>
    <description>GSS Inventory Report</description>
    <label>GSS Inventory Report</label>
    <nameField>
        <label>GSS Inventory Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSS Inventory Report</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>