force-app/main/default/objects/GSS_Inventory_Report__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <label>BatchNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>