force-app/main/default/objects/GSS_Inventory_Report__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GSS Inventory Report</relationshipLabel>
    <relationshipName>GSS_Inventory_Report</relationshipName>
    <type>Lookup</type>
</CustomField>