force-app/main/default/objects/GSS_Inventory_Report__c/fields/CustomerModel__c.field-meta.xml
<CustomField>
    <fullName>CustomerModel__c</fullName>
    <label>CustomerModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>