force-app/main/default/objects/GSS_Inventory_Report__c/fields/CustomerSAPCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerSAPCode__c</fullName>
    <label>CustomerSAPCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>