force-app/main/default/objects/GSS_Inventory_Report__c/fields/DisposalMeasures__c.field-meta.xml
<CustomField>
    <fullName>DisposalMeasures__c</fullName>
    <label>DisposalMeasures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>