force-app/main/default/objects/GSS_Inventory_Report__c/fields/EstimatedBillOfLadingDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedBillOfLadingDate__c</fullName>
    <label>EstimatedBillOfLadingDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>