force-app/main/default/objects/GSS_Inventory_Report__c/fields/FirstStockInDate__c.field-meta.xml
<CustomField>
    <fullName>FirstStockInDate__c</fullName>
    <label>FirstStockInDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>