force-app/main/default/objects/GSS_Inventory_Report__c/fields/LastStockInDate__c.field-meta.xml
<CustomField>
    <fullName>LastStockInDate__c</fullName>
    <label>LastStockInDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>