force-app/main/default/objects/GSS_Inventory_Report__c/fields/OverdueReason__c.field-meta.xml
<CustomField>
    <fullName>OverdueReason__c</fullName>
    <label>OverdueReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>