force-app/main/default/objects/GSS_Inventory_Report__c/fields/PartialShippingTime__c.field-meta.xml
<CustomField>
    <fullName>PartialShippingTime__c</fullName>
    <label>PartialShippingTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>