force-app/main/default/objects/GSS_Inventory_Report__c/fields/ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>ProductCategory__c</fullName>
    <label>ProductCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>