force-app/main/default/objects/GSS_Inventory_Report__c/fields/ProductionBase__c.field-meta.xml
<CustomField>
    <fullName>ProductionBase__c</fullName>
    <label>ProductionBase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>