force-app/main/default/objects/GSS_Inventory_Report__c/fields/ProductLineText__c.field-meta.xml
<CustomField>
    <fullName>ProductLineText__c</fullName>
    <label>ProductLineText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>