force-app/main/default/objects/GSS_Inventory_Report__c/fields/ProductState__c.field-meta.xml
<CustomField>
    <fullName>ProductState__c</fullName>
    <label>ProductState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>