force-app/main/default/objects/GSS_Inventory_Report__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>ProductType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>