force-app/main/default/objects/GSS_Inventory_Report__c/fields/SalesBigArea__c.field-meta.xml
<CustomField>
    <fullName>SalesBigArea__c</fullName>
    <label>SalesBigArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>