force-app/main/default/objects/GSS_Inventory_Report__c/fields/SalesSmallArea__c.field-meta.xml
<CustomField>
    <fullName>SalesSmallArea__c</fullName>
    <label>SalesSmallArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>