force-app/main/default/objects/GSS_Inventory_Report__c/fields/ScheduledShippingTime__c.field-meta.xml
<CustomField>
    <fullName>ScheduledShippingTime__c</fullName>
    <label>ScheduledShippingTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>