force-app/main/default/objects/GSS_Inventory_Report__c/fields/ShippingOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ShippingOrderNumber__c</fullName>
    <label>ShippingOrderNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>