force-app/main/default/objects/GSS_Inventory_Report__c/fields/StockAge1__c.field-meta.xml
<CustomField>
    <fullName>StockAge1__c</fullName>
    <formula>VALUE(StockAge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StockAge1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>