force-app/main/default/objects/GSS_Inventory_Report__c/fields/StockAge__c.field-meta.xml
<CustomField>
    <fullName>StockAge__c</fullName>
    <label>StockAge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>