force-app/main/default/objects/GSS_Inventory_Report__c/fields/StockInCount__c.field-meta.xml
<CustomField>
    <fullName>StockInCount__c</fullName>
    <label>StockInCount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>