force-app/main/default/objects/GSS_Inventory_Report__c/fields/StorageCount__c.field-meta.xml
<CustomField>
    <fullName>StorageCount__c</fullName>
    <label>StorageCount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>