force-app/main/default/objects/GSS_Inventory_Report__c/fields/StorageCount_c_1__c.field-meta.xml
<CustomField>
    <fullName>StorageCount_c_1__c</fullName>
    <description>库存数量</description>
    <formula>VALUE( StorageCount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StorageCount__c_1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>